Updated index.html with new content

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- partners section starts -->
     <section class="partners">
         <div class="box-container">
-            <img src="images/stackdev-logo.png" alt="" class="box">
+            <img src="images/StackDev-logo.png" alt="" class="box">
             <img src="images/StarScraft-logo.png" alt="" class="box">
             <img src="images/TheDevelop-logo.png" alt="" class="thedevelop">
             <img src="images/RedPoint-logo.png" alt="" class="thedevelop">
