update content in html and css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header section starts -->
     <header class="header">
         <section class="flex">
-            <a href="#" class="logo"><i class="fas fa-credit-card"></i> LOGO</a>
+            <a href="#" class="logo"><i class="fas fa-credit-card"></i> Credify</a>
             <nav class="navbar">
                 <a href="#home">Home</a>
                 <a href="#about">about</a>
@@ -330,7 +330,7 @@
         <div class="heading">our <span>blogs</span></div>
         <div class="box-container">
             <div class="box">
-                <img src="images/blog1.jpg" alt="">
+                <img src="images/blog-img1.png" alt="">
                 <div class="info">
                     <a href="#"><i class="far fa-calendar"></i><span>1st jan, 2024</span></a>
                     <a href="#"><i class="far fa-user"></i><span> by admin</span></a>
@@ -341,9 +341,9 @@
             </div>
 
             <div class="box">
-                <img src="images/blog2.jpg" alt="">
+                <img src="images/blog-img2.png" alt="">
                 <div class="info">
-                    <a href="#"><i class="far fa-calendar"></i><span>1st jan, 2024</span></a>
+                    <a href="#"><i class="far fa-calendar"></i><span>15th feb, 2024</span></a>
                     <a href="#"><i class="far fa-user"></i><span> by admin</span></a>
                 </div>
                 <h3>blog title 02</h3>
@@ -352,9 +352,9 @@
             </div>
 
             <div class="box">
-                <img src="images/blog3.jpg" alt="">
+                <img src="images/blog-img3.png" alt="">
                 <div class="info">
-                    <a href="#"><i class="far fa-calendar"></i><span>1st jan, 2024</span></a>
+                    <a href="#"><i class="far fa-calendar"></i><span>28th mar, 2024</span></a>
                     <a href="#"><i class="far fa-user"></i><span> by admin</span></a>
                 </div>
                 <h3>blog title 03</h3>
@@ -384,7 +384,7 @@
     <footer class="footer">
         <section>
             <div class="flex">
-                <a href="#" class="logo"><i class="fas fa-credit-card"></i> LOGO</a>
+                <a href="#" class="logo"><i class="fas fa-credit-card"></i> credify</a>
             <nav class="links">
                 <a href="#home">Home</a>
                 <a href="#about">about</a>
