updated html content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section class="flex">
             <div class="content">
                 <h3>the best choice of online <span>credit card</span> payment</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim officia molestias rem veritatis nisi natus, exercitationem placeat! Fuga, voluptatum? Aut officiis quasi quo in alias similique quidem deleniti sit laudantium.</p>
+                <p>Manage your payments effortlessly and securely with Credify. Our platform ensures fast transactions, robust security, and real-time tracking—giving you full control over your credit card experience.</p>
                 <a href="#" class="btn">apply now <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="image">
@@ -60,7 +60,7 @@
 
             <div class="content">
                 <h3>customize and control your own <span>credit card</span></h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium ipsum animi blanditiis, accusantium totam facere!</p>
+                <p>Design a card that fits your lifestyle. Choose your limit, benefits, and look—then manage everything right from your mobile or desktop with a few clicks.</p>
                 <a href="#" class="btn">apply now <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
@@ -70,7 +70,7 @@
                     <img src="images/certified.png" alt="">
                     <h3>certified</h3>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, officiis.</p>
+                <p>We are certified and compliant, ensuring your data stays secure, encrypted, and fully protected.</p>
                 <a href="#" class="btn-2">learn more <i class="fas fa-arrow-right"></i></a>
             </div>
 
@@ -79,7 +79,7 @@
                     <img src="images/transparent.png" alt="">
                     <h3>transparent</h3>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, officiis.</p>
+                <p>Clear pricing, no hidden charges, every fee is explained upfront for total transparency and trust.</p>
                 <a href="#" class="btn-2">learn more <i class="fas fa-arrow-right"></i></a>
             </div>
 
@@ -88,7 +88,7 @@
                     <img src="images/fast-apply.png" alt="">
                     <h3>fast-apply</h3>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, officiis.</p>
+                <p>Apply online within minutes, get instant approval, and start using your digital card right away.</p>
                 <a href="#" class="btn-2">learn more <i class="fas fa-arrow-right"></i></a>
             </div>
 
@@ -97,7 +97,7 @@
                     <img src="images/24-hours-support.png" alt="">
                     <h3>24/7 support</h3>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, officiis.</p>
+                <p>Our expert support team is available anytime—chat, call, or email us whenever you need help.</p>
                 <a href="#" class="btn-2">learn more <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
@@ -112,7 +112,7 @@
                 <div class="box">
                     <img src="images/greenCC.png" alt="">
                     <h3>green</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, ipsum.</p>
+                    <p>A perfect starter card with essential features for safe and secure everyday transactions within your country.</p>
                     <div class="info">
                         <p>accepts : <span>USD</span></p>
                         <p>valid in : <span>your country</span></p>
@@ -124,7 +124,7 @@
                 <div class="box">
                     <img src="images/silverCC.png" alt="">
                     <h3>silver</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, ipsum.</p>
+                    <p>Ideal for frequent travelers with support for multiple currencies and access to global privileges.</p>
                     <div class="info">
                         <p>accepts : <span>USD, EUR, CNY</span></p>
                         <p>valid in : <span>50 countries</span></p>
@@ -136,7 +136,7 @@
                 <div class="box">
                     <img src="images/blackCC.png" alt="">
                     <h3>black</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, ipsum.</p>
+                    <p>Our most premium card with global access, unlimited transactions, and maximum currency compatibility.</p>
                     <div class="info">
                         <p>accepts : <span>all currencies</span></p>
                         <p>valid in : <span>all countries</span></p>
@@ -156,19 +156,19 @@
             <div class="box">
                 <img src="images/download.png" alt="">
                 <h3>download the app</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio sapiente officia autem harum similique molestias.</p>
+                <p>Download the Credify mobile app and begin your credit card application with a few easy steps today.</p>
             </div>
 
             <div class="box">
                 <img src="images/submit-form.png" alt="">
                 <h3>submit the form</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio sapiente officia autem harum similique molestias.</p>
+                <p>Fill in your personal and financial details securely through the app and choose your card type.</p>
             </div>
 
             <div class="box">
                 <img src="images/wait-till-approved.png" alt="">
                 <h3>wait till approved</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio sapiente officia autem harum similique molestias.</p>
+                <p>Our system will verify your information. Once approved, your card will be dispatched within 48 hours.</p>
             </div>
         </div>
     </section>
@@ -179,12 +179,12 @@
         <section class="row">
             <div class="content">
                 <h3>what users say about services ?</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam quo architecto suscipit quae saepe dicta.</p>
+                <p>Discover how users experience our seamless credit card management tools and secure digital services.</p>
             </div>
             <div class="slider-container">
                 <div class="slider">
                     <div class="slide active">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit placeat illum repudiandae minus sit iusto nisi harum optio, sapiente dolorem.</p>
+                        <p>Credify made managing my credit card easier than ever. The interface is clean, fast, and intuitive. Highly recommended for anyone looking for a modern card solution.</p>
                         <div class="user">
                             <img src="images/boy-review1.jpg" alt="">
                             <div>
@@ -202,7 +202,7 @@
                     </div>
 
                     <div class="slide">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit placeat illum repudiandae minus sit iusto nisi harum optio, sapiente dolorem.</p>
+                        <p>The demo was smooth and well-designed. I was impressed by how easy it was to simulate transactions and apply for a card.</p>
                         <div class="user">
                             <img src="images/girl-review1.jpg" alt="">
                             <div>
@@ -220,7 +220,7 @@
                     </div>
 
                     <div class="slide">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit placeat illum repudiandae minus sit iusto nisi harum optio, sapiente dolorem.</p>
+                        <p>Even though this is only a demo project, the design, layout, responsiveness, and features make it feel like a complete and realistic online banking experience. Great job!</p>
                         <div class="user">
                             <img src="images/boy-review2.jpg" alt="">
                             <div>
@@ -238,7 +238,7 @@
                     </div>
 
                     <div class="slide">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit placeat illum repudiandae minus sit iusto nisi harum optio, sapiente dolorem.</p>
+                        <p>The user interface is clean and modern, the steps are clearly defined, and the features are useful—this project demonstrates strong potential for real-world implementation</p>
                         <div class="user">
                             <img src="images/girl-review2.jpg" alt="">
                             <div>
@@ -295,7 +295,7 @@
             </div>
             <div class="content">
                 <h3>banking solution that works around you in <span>easy way</span></h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur pariatur consequuntur ad, velit aspernatur officiis! Sed itaque odit culpa. Nobis!</p>
+                <p>This demo project showcases how a modern credit card system can adapt to your platform and needs, offering easy-to-use features and a clean user experience.</p>
                 <a href="#" class="btn">learn more <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
@@ -336,7 +336,7 @@
                     <a href="#"><i class="far fa-user"></i><span> by admin</span></a>
                 </div>
                 <h3>blog title 01</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi modi, sequi voluptatem dolores eos excepturi.</p>
+                <p>Learn how digital credit cards enhance online security, convenience, and control over daily spending habits.</p>
                 <a href="#" class="btn-2">learn more <i class="fas fa-arrow-right"></i></a>
             </div>
 
@@ -347,7 +347,7 @@
                     <a href="#"><i class="far fa-user"></i><span> by admin</span></a>
                 </div>
                 <h3>blog title 02</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi modi, sequi voluptatem dolores eos excepturi.</p>
+                <p>Explore smart ways to manage multiple credit cards and avoid interest with better financial planning.</p>
                 <a href="#" class="btn-2">learn more <i class="fas fa-arrow-right"></i></a>
             </div>
 
@@ -358,7 +358,7 @@
                     <a href="#"><i class="far fa-user"></i><span> by admin</span></a>
                 </div>
                 <h3>blog title 03</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi modi, sequi voluptatem dolores eos excepturi.</p>
+                <p>Discover how contactless payments and POS systems are transforming everyday credit card usage experiences.</p>
                 <a href="#" class="btn-2">learn more <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
@@ -370,7 +370,7 @@
         <section>
             <form action="">
                 <h3>get newsletter</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt consequuntur magni laudantium neque vero reiciendis.</p>
+                <p>Stay updated with the latest credit card tips, product features, and finance trends delivered monthly to your inbox.</p>
                 <div class="flex">
                     <input type="text" class="input" placeholder="enter your email" maxlength="30">
                     <input type="submit" value="subscribe">
